# hermit-crab

./: AGENT.md  Cargo.toml  DEPENDENCIES.md  README.md
memory/: JOURNAL.md
src/: lib.rs
