[package]
name = "hermit-crab"
version = "0.1.0"
edition = "2021"
description = "An agent that crawls between shells (hardware/repo configurations), preserving knowledge across migrations."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
